Fixed a common parent of v1 and v2 SubscriptionPollResponseApi